--- a/Areas/Admin/Views/ToHopMons/Create.cshtml
+++ b/Areas/Admin/Views/ToHopMons/Create.cshtml
@@ -4,7 +4,147 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
+<script>
+    $('document').ready(function () {
+        loadData();
+        var itemsPerPage = 5; // Number of items to display per page
+        var currentPage = 1; // Current page
 
+        // Hide all rows except the ones for the current page
+        function showRows() {
+            var startIndex = (currentPage - 1) * itemsPerPage;
+            var endIndex = startIndex + itemsPerPage;
+
+            $(".table tbody tr").hide().slice(startIndex, endIndex).show();
+        }
+
+        // Handle next page click event
+        $(".next").on("click", function (e) {
+            e.preventDefault();
+            currentPage++;
+            showRows();
+            updatePaginationState();
+        });
+
+        // Handle previous page click event
+        $(".prev").on("click", function (e) {
+            e.preventDefault();
+            if (currentPage > 1) {
+                currentPage--;
+                showRows();
+                updatePaginationState();
+            }
+        });
+
+        // Update pagination state based on current page
+        function updatePaginationState() {
+            var totalPages = Math.ceil($(".table tbody tr").length / itemsPerPage);
+
+            if (currentPage === 1) {
+                $(".prev").parent().addClass("disabled");
+            } else {
+                $(".prev").parent().removeClass("disabled");
+            }
+
+            if (currentPage === totalPages) {
+                $(".next").parent().addClass("disabled");
+            } else {
+                $(".next").parent().removeClass("disabled");
+            }
+        }
+
+        // Show initial page of rows
+        showRows();
+        updatePaginationState();
+
+        $("#Thm_Mon1, #Thm_Mon2, #Thm_Mon3").on("input", function () {
+            var value1 = $("#Thm_Mon1").val();
+            var value2 = $("#Thm_Mon2").val();
+            var value3 = $("#Thm_Mon3").val();
+
+            var result = value1 + " " + value2 + " " + value3;
+
+            $("#Thm_TenToHop").val(result);
+        });
+    })
+
+    function loadData() {
+        $.ajax({
+            url: "/Admin/ToHopMons/getAllNganhs",
+            type: "GET",
+            contentType: "application/json;charset=utf-8",
+            success: function (response) {
+                if (response.success) {
+                    let htmlString = "";
+                    let nganhs = response.nganhs;
+                    let count = 0;
+                    $.each(nganhs, function (i, result) {
+                        if (result.Nganh_ID > 0) {
+                            htmlString += '<tr>' +
+                                '<td style="vertical-align: middle !important ">' + result.Nganh_MaNganh + "&nbsp;" + ' </td> ' +
+                                '<td style="vertical-align: middle !important "> ' + result.NganhTenNganh + ' </td>' +
+                                '<td><div class="form-check"><input class="form-check-input" type="checkbox" value="" id="' + result.Nganh_ID + '"><label class="form-check-label" for="flexCheckDefault"> Chọn </label></div></td>' +
+                                '</tr>'
+
+                        }
+                    });
+                    document.getElementById('infoList').innerHTML = htmlString;
+                } else {
+                }
+            },
+            error: function (xhr, status, error) {
+                // Handle any errors
+                console.error(error);
+            }
+        });
+    }
+
+    function submitForm() {
+        $(".text-danger").text("");
+        let flag = true;
+        let Thm_MaToHop = $('#Thm_MaToHop').val();
+        let Thm_Mon1 = $('#Thm_Mon1').val();
+        let Thm_Mon2 = $('#Thm_Mon2').val();
+        let Thm_Mon3 = $('#Thm_Mon3').val();
+        let Thm_TenToHop = $('#Thm_TenToHop').val();
+
+        if (!Thm_MaToHop) {
+            var errorMessage = "Vui lòng nhập mã tổ hợp";
+            $('#Thm_MaToHop_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon1) {
+            var errorMessage = "Vui lòng nhập môn 1";
+            $('#Thm_Mon1_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon2) {
+            var errorMessage = "Vui lòng nhập môn 2";
+            $('#Thm_Mon2_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon3) {
+            var errorMessage = "Vui lòng nhập môn 3";
+            $('#Thm_Mon2_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!flag) return;
+        $("#loadingModal").modal("show");
+
+        let checkedRows = [];
+        $('#tableNganh tbody tr').each(function () {
+            var checkbox = $(this).find("input[type='checkbox']");
+
+            if (checkbox.is(":checked")) {
+                var row = $(this).find("td").map(function () {
+                    return $(this);
+                }).get();
+
+                checkedRows.push(row);
+            }
+        });
+    }
+</script>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
@@ -25,7 +165,7 @@
         <div class="card card-header-actions">
             <div class="card-header">
                 <span>Thêm mới tổ hợp môn</span>
-                <a class="btn-close" aria-label="Close" href="@Url.Action("Index","ToHopMons")"></a>             
+                <a class="btn-close" aria-label="Close" href="@Url.Action("Index","ToHopMons")"></a>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -42,7 +182,7 @@
                                                 @Html.Label("Mã tổ hợp", htmlAttributes: new { @class = "control-label col-md-12" })
                                                 <div class="col-md-12">
                                                     @Html.EditorFor(model => model.Thm_MaToHop, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Thm_MaToHop, "", new { @class = "text-danger" })
+                                                    <span class="field-validation-valid text-danger" id="Thm_MaToHop_Error" data-valmsg-replace="true"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -50,7 +190,7 @@
                                             <div class="form-group">
                                                 @Html.Label("Tên tổ hợp", htmlAttributes: new { @class = "control-label col-md-12" })
                                                 <div class="col-md-12">
-                                                    @Html.EditorFor(model => model.Thm_TenToHop, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.EditorFor(model => model.Thm_TenToHop, new { htmlAttributes = new { @class = "form-control", @disabled = true } })
                                                     @Html.ValidationMessageFor(model => model.Thm_TenToHop, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
@@ -62,7 +202,7 @@
                                                 @Html.Label("Tên môn 1", htmlAttributes: new { @class = "control-label col-md-12" })
                                                 <div class="col-md-12">
                                                     @Html.EditorFor(model => model.Thm_Mon1, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Thm_Mon1, "", new { @class = "text-danger" })
+                                                    <span class="field-validation-valid text-danger" id="Thm_Mon1_Error" data-valmsg-replace="true"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -71,7 +211,7 @@
                                                 @Html.Label("Tên môn 2", htmlAttributes: new { @class = "control-label col-md-12" })
                                                 <div class="col-md-12">
                                                     @Html.EditorFor(model => model.Thm_Mon2, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Thm_Mon2, "", new { @class = "text-danger" })                                                   
+                                                    <span class="field-validation-valid text-danger" id="Thm_Mon2_Error" data-valmsg-replace="true"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -81,11 +221,11 @@
                                                 @Html.Label("Tên môn 3", htmlAttributes: new { @class = "control-label col-md-12" })
                                                 <div class="col-md-12">
                                                     @Html.EditorFor(model => model.Thm_Mon3, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.Thm_Mon3, "", new { @class = "text-danger" })
+                                                    <span class="field-validation-valid text-danger" id="Thm_Mon3_Error" data-valmsg-replace="true"></span>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> 
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -94,49 +234,19 @@
                         <div class="card card-header-actions mt-1 mb-1 ">
                             <div class="card-header">Ngành sử dụng tổ hợp môn mới</div>
                             <div class="card-body">
-                                <table class="table table-striped table-hover">
-                                    <tr>
-                                        <td>7480201</td>
-                                        <td>Công nghệ thông tin</td>
-                                        <td style="width:80px">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>7320104</td>
-                                        <td>Truyền thông đa phương tiện</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>7580201</td>
-                                        <td>Kỹ thuật xây dựng</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>7340301</td>
-                                        <td>Kế toán</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-
+                                <table id="tableNganh" class="table table-striped table-hover">
+                                    <tbody id="infoList"></tbody>
                                 </table>
+                                <nav>
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item disabled">
+                                            <a class="page-link prev" href="#" tabindex="-1">Trước</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a class="page-link next" href="#">Sau</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </div>
                         </div>
                     </div>
@@ -145,7 +255,7 @@
                     <hr class="mt-1 mb-1" />
                     <div class="col-md-2 col-3">
                         @*<input type="submit" value="Create" class="btn btn-default" />*@
-                        <input class="btn btn-outline-success" type="submit" value="Đồng ý" style="width:100%" />
+                        <input type="button" class="btn btn-outline-success" value="Đồng ý" onclick="submitForm()" style="width:100%" />
                     </div>
                     <div class="col-md-2 col-3">
                         @Html.ActionLink("Hủy bỏ", "Index", null, new { @class = "btn btn-outline-danger", @style = "width:100%; white-space:nowrap" })
